@@ -114,10 +114,10 @@ public class DirectMessageRefreshService extends IntentService {
 
                 NotificationCompat.Builder mBuilder =
                         new NotificationCompat.Builder(this)
-                                .setSmallIcon(R.drawable.ic_action_accept_dark)
-                                .setContent(remoteView);
-                //.setContentTitle(getResources().getString(R.string.app_name))
-                //.setContentText(numberNew + " new tweets");
+                                .setSmallIcon(R.drawable.ic_action_reply_dark)
+                                //.setContent(remoteView);
+                                .setContentTitle(getResources().getString(R.string.app_name))
+                                .setContentText(numberNew == 1 ? numberNew + " " + getResources().getString(R.string.new_direct_message) : numberNew + " " + getResources().getString(R.string.new_direct_messages));
 
                 Intent resultIntent = new Intent(this, MainActivity.class);
                 resultIntent.putExtra("open_to_page", 2);
