@@ -124,10 +124,10 @@ public class MentionsRefreshService extends IntentService {
 
                 NotificationCompat.Builder mBuilder =
                         new NotificationCompat.Builder(this)
-                                .setSmallIcon(R.drawable.ic_action_accept_dark)
-                                .setContent(remoteView);
-                //.setContentTitle(getResources().getString(R.string.app_name))
-                //.setContentText(numberNew + " new tweets");
+                                .setSmallIcon(R.drawable.mentions_dark)
+                                //.setContent(remoteView);
+                                .setContentTitle(getResources().getString(R.string.app_name))
+                                .setContentText(numberNew == 1 ? numberNew + " " + getResources().getString(R.string.new_mention) : numberNew + " " + getResources().getString(R.string.new_mentions));
 
                 Intent resultIntent = new Intent(this, MainActivity.class);
                 resultIntent.putExtra("open_to_page", 1);
