@@ -1,5 +1,6 @@
 Version 0.40: This is now a real, completely functional twitter app.<br/><br/>
     &#8226; All settings working in the settings menu.<br/>
+    &#8226; Followers and following lists now working for profiles <br/>
     &#8226; Notifications for new tweets, direct messages, and mentions<br/>
     &#8226; New slim font (Roboto light)<br/>
     &#8226; Updates mentions when you update the timeline as well<br/>
